--- a/popnow/pubspec.yaml
+++ b/popnow/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   sqflite: ^2.0.3+1
   datetime_picker_formfield: ^2.0.1
+  shared_preferences: ^2.0.16
 
 dev_dependencies:
   flutter_test:
